--- a/index.html
+++ b/index.html
@@ -22,3 +22,31 @@ alt="Placeholder Image">
 </body>
 </html> 
 classwork 1
+
+
+
+
+
+
+
+<ul style="color: rgb(255, 0, 255); background-color: #00FF00;">
+  <li>Products.</li>
+  <li>Brands.</li>
+  </ul>
+  
+  <table style="color: rgb(0, 0, 255); background-color: #FF0000;">
+  <tr>
+  <th>Organic.</th>
+  <th>Artificial</th>
+  </tr>
+  <tr>
+  <td>Cloth</td>
+  <td>Soap</td>
+  </tr>
+  </table>
+classwork 2
+
+
+
+
+
