--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
- <!DOCTYPE html>
+Classwork1 
+<!DOCTYPE html>
 <html>
 <head>
   <title>Classwork Example</title>
@@ -21,7 +22,6 @@ via.placeholder.com/150"
 alt="Placeholder Image">
 </body>
 </html> 
-classwork 1
 
 
 
@@ -29,6 +29,7 @@ classwork 1
 
 
 
+Classwork 2
 <ul style="color: rgb(255, 0, 255); background-color: #00FF00;">
   <li>Products.</li>
   <li>Brands.</li>
