--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@ alt="Placeholder Image">
 
 Classwork 2
 <ul style="color: rgb(255, 0, 255); background-color: #00FF00;">
-  <li>Products.</li>
-  <li>Brands.</li>
+  <li>Products</li>
+  <li>Brands</li>
   </ul>
   
   <table style="color: rgb(0, 0, 255); background-color: #FF0000;">
   <tr>
-  <th>Organic.</th>
+  <th>Organic</th>
   <th>Artificial</th>
   </tr>
   <tr>
@@ -45,7 +45,7 @@ Classwork 2
   <td>Soap</td>
   </tr>
   </table>
-classwork 2
+
 
 
 
