--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-Classwork1 
+Classwork 1
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Classwork Example</title>
+  <title>Classwork 1 Example</title>
 </head>
 <body>
     <h1>This is a Heading 1</h1>
@@ -26,27 +26,80 @@ alt="Placeholder Image">
 
 
 
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Classwork 2 Example</title>
+  <style>
+    body {
+      color: rgb(255, 0, 0);
+      background-color: #00FF00;
+    }
 
+    h2 {
+      class: 'classwork2';
+      font-size: 24px;
+      text-align: center;
+    }
 
+    ul {
+      color: rgb(0, 255, 0);
+      background-color: #FFFF00;
+    }
 
-Classwork 2
-<ul style="color: rgb(255, 0, 255); background-color: #00FF00;">
-  <li>Products</li>
-  <li>Brands</li>
+    ol {
+      color: rgb(0, 0, 255);
+      background-color: #FF0000;
+    }
+
+    table {
+      color: rgb(255, 255, 0);
+      background-color: #00FFFF;
+    }
+
+    th {
+      text-align: left;
+    }
+
+    td {
+      text-align: right;
+    }
+  </style>
+</head>
+
+<body>
+  <h2>Classwork 2</h2>
+
+  <ul>
+    <li>Notebooks 1</li>
+    <li>Books 2</li>
   </ul>
-  
-  <table style="color: rgb(0, 0, 255); background-color: #FF0000;">
-  <tr>
-  <th>Organic</th>
-  <th>Artificial</th>
-  </tr>
-  <tr>
-  <td>Cloth</td>
-  <td>Soap</td>
-  </tr>
+
+  <ol>
+    <li>Square Notebooks 1</li>
+    <li>Lines Notebooks 2</li>
+  </ol>
+
+  <table>
+    <tr>
+      <th>Teachers 1</th>
+      <th>Classes 1</th>
+    </tr>
+    <tr>
+      <td>Miss Karen 2</td>
+      <td>Sarah 2</td>
+    </tr>
   </table>
+</body>
+</html>
 
 
+
+
+
+
+
+  
 
 
 
