--- a/index.html
+++ b/index.html
@@ -5,15 +5,14 @@ Classwork 1
   <title>Classwork 1 Example</title>
 </head>
 <body>
-    <h1>This is a Heading 1</h1>
-    <h2>This is a Heading 2</h2>
-    <p>This is a paragraph of text.
+    <h1>This is a house.</h1>
+    <h2>This is an amphitheatre. 2</h2>
+    <p>This is a school..
 You can make text <b>bold</b> or
 <i>italic</i>.</p>
-   <p>This is a line break:<br>It
-creates a new line.</p>
+   <p>We have 5 oceans in the world  :<br>Pacific,Indian,Atlantic,South,Arctic.</p>
    <hr>
-   <p>This is a horizontal rule.</p>
+   <p>Next hour is break time..</p>
    <a href="https://
 wwww.example.com">This is a link to
 Example.com</a>
@@ -26,76 +25,9 @@ alt="Placeholder Image">
 
 
 
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Classwork 2 Example</title>
-  <style>
-    body {
-      color: rgb(255, 0, 0);
-      background-color: #00FF00;
-    }
 
-    h2 {
-      class: 'classwork2';
-      font-size: 24px;
-      text-align: center;
-    }
-
-    ul {
-      color: rgb(0, 255, 0);
-      background-color: #FFFF00;
-    }
-
-    ol {
-      color: rgb(0, 0, 255);
-      background-color: #FF0000;
-    }
-
-    table {
-      color: rgb(255, 255, 0);
-      background-color: #00FFFF;
-    }
-
-    th {
-      text-align: left;
-    }
-
-    td {
-      text-align: right;
-    }
-  </style>
-</head>
-
-<body>
-  <h2>Classwork 2</h2>
-
-  <ul>
-    <li>Notebooks 1</li>
-    <li>Books 2</li>
-  </ul>
-
-  <ol>
-    <li>Square Notebooks 1</li>
-    <li>Lines Notebooks 2</li>
-  </ol>
-
-  <table>
-    <tr>
-      <th>Teachers 1</th>
-      <th>Classes 1</th>
-    </tr>
-    <tr>
-      <td>Miss Karen 2</td>
-      <td>Sarah 2</td>
-    </tr>
-  </table>
-</body>
-</html>
-
-
-
-
+    
+  
 
 
 
