--- a/index.html
+++ b/index.html
@@ -24,6 +24,75 @@ alt="Placeholder Image">
 
 
 
+Classwork 2
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Classwork 2 Example</title>
+  <style>
+    body {
+      color: rgb(245, 100, 0);
+      background-color: #00FF00;
+    }
+
+    h2 {
+      class: 'classwork2';
+      font-size: 24px;
+      text-align: center;
+    }
+
+    ul {
+      color: rgb(0, 255, 120);
+      background-color: #FFFF00;
+    }
+
+    ol {
+      color: rgb(0, 133, 255);
+      background-color: #FF0000;
+    }
+
+    table {
+      color: rgb(255, 255, 0);
+      background-color: #00FFFF;
+    }
+
+    th {
+      text-align: left;
+    }
+
+    td {
+      text-align: right;
+    }
+  </style>
+</head>
+
+<body>
+  <h2>Classwork 2</h2>
+
+  <ul>
+    <li>Notebooks</li>
+    <li>Books</li>
+  </ul>
+
+  <ol>
+    <li>Squared Notebooks</li>
+    <li>Lines Notebooks</li>
+  </ol>
+
+  <table>
+    <tr>
+      <th>Teachers</th>
+      <th>Students</th>
+    </tr>
+    <tr>
+      <td>Miss Karen</td>
+      <td>Catherine</td>
+    </tr>
+  </table>
+</body>
+</html>
+
+
 
 
     
