--- a/index.html
+++ b/index.html
@@ -94,6 +94,36 @@ Classwork 2
 
 
 
+Classwork 3 
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Classwork 3 Example</title>
+  <style>
+    h3 {
+      color: red;
+    }
+
+    .classwork {
+      font-size: 24px;
+    }
+  </style>
+</head>
+<body>
+  <h3 class="classwork">Classwork 3</h3>
+
+  <ol class="classwork">
+    <li>Water.</li>
+    <li>Coffee.</li>
+  </ol>
+</body>
+</html>
+
+
+
+
+
+
 
     
   
