--- a/index.html
+++ b/index.html
@@ -120,6 +120,22 @@ Classwork 3
 </html>
 
 
+Classwork 4 
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Classwork 4 Example</title>
+  <style>
+    #my-button {
+      background-color: blue;
+      color: white;
+    }
+  </style>
+</head>
+<body>
+  <button id="my-button">Click Me!</button>
+</body>
+</html>
 
 
 
