--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@ Classwork 1
     <h1>This is a house.</h1>
     <h2>This is an amphitheatre. 2</h2>
     <p>This is a school..
-You can make text <b>bold</b> or
-<i>italic</i>.</p>
+You can study new things <b>here</b> or
+<i>meet new friends</i>.</p>
    <p>We have 5 oceans in the world  :<br>Pacific,Indian,Atlantic,South,Arctic.</p>
    <hr>
    <p>Next hour is break time..</p>
