--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@ You can study new things <b>here</b> or
    <a href="https://
 wwww.example.com">This is a link to
 Example.com</a>
-  <img src="https://
-via.placeholder.com/150"
+  <img src="https://cdn.pixabay.com/photo/2016/11/29/04/19/ocean-1867285_640.jpg"
 alt="Placeholder Image">
 </body>
 </html> 
