--- a/index.html
+++ b/index.html
@@ -138,6 +138,19 @@ Classwork 4
 
 
 
+p {
+  color: cyan;
+  font-family: sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
+}
+
+
+
+
+
+
+
 
 
     
