--- a/index.html
+++ b/index.html
@@ -146,12 +146,41 @@ p {
 }
 
 
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Homepage</title>
+        <link rel="stylesheet" type="text/css" href="style.css">
+    </head>
+    <body>
+        <h1>Welcome to the  Aquapark</h1>
+        <p>Click <a href="about.html">here</a> to go to the about page.</p>
+    </body>
+</html>
+
+
+
+
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>About Page</title>
+        <link rel="stylesheet" type="text/css" href="style.css">
+    </head>
+    <body>
+        <h1>Welcome to the Food Corner</h1>
+        <p>Click <a href="index.html">here</a> to go to the homepage.</p>
+    </body>
+</html>
 
 
 
 
 
-
+body {
+    text-align: center;
+    font-family: Al Nile;
+}
 
     
   
