--- a/index.html
+++ b/index.html
@@ -139,11 +139,13 @@ Classwork 4
 
 
 p {
-  color: cyan;
+  color: blue;
   font-family: sans-serif;
   font-size: 16px;
   line-height: 1.5;
 }
+
+
 
 
 <!DOCTYPE html>
