--- a/index.html
+++ b/index.html
@@ -184,6 +184,19 @@ body {
     font-family: Al Nile;
 }
 
+
+Classwork 5 
+<!DOCTYPE html>
+<html>
+<head>
+<title>Eiffel Tower Map</title>
+</head>
+<body>
+
+<iframe width="400" height="300" src="https://maps.google.com/maps?q=Eiffel+Tower,+Paris,+France&t=q&z=15&output=embed" frameborder="0" style="border:0"></iframe>
+
+</body>
+</html>
     
   
 
