--- a/index.html
+++ b/index.html
@@ -185,19 +185,46 @@ body {
 }
 
 
-Classwork 5 
+
 <!DOCTYPE html>
 <html>
 <head>
 <title>Eiffel Tower Map</title>
 </head>
 <body>
+<h2>Classwork 5</h2>  
 
 <iframe width="400" height="300" src="https://maps.google.com/maps?q=Eiffel+Tower,+Paris,+France&t=q&z=15&output=embed" frameborder="0" style="border:0"></iframe>
 
 </body>
 </html>
-    
+
+
+
+
+
+<!DOCTYPE html>
+<html>
+<head>
+<title>My website</title>
+</head>
+<body>
+<div id="nav-bar">
+  <ul>
+    <li><a href="#">Home</a></li>
+    <li><a href="#">About</a></li>
+    <li><a href="#">Contact</a></li>
+  </ul>
+</div>
+<div id="content">
+  <h1>Welcome to my website!</h1>
+  <p>This is my website. It is still under development, but I am working hard to add more content.</p>
+</div>
+<div id="footer">
+  <p>&copy; 2023 My website</p>
+</div>
+</body>
+</html>
   
 
 
