--- a/index.html
+++ b/index.html
@@ -225,6 +225,58 @@ body {
 </div>
 </body>
 </html>
+
+
+Classwork 6
+
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Opening a store</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <div class="nav-bar">
+    <a href="#">Steps</a>
+    <a href="#">Products</a>
+    <a href="#">Prices</a>
+  </div>
+
+  <div id="content">
+    <h1>My Store</h1>
+    <p>Welcome to my store.</p>
+  </div>
+
+  <div class="footer">
+    <p>&copy; 2023 My Store</p>
+  </div>
+</body>
+</html>
+
+
+div {
+    padding: 10px;
+    border: 1px solid #5a3e3e;
+  }
+  
+  
+  .nav-bar {
+    background-color: #ae7676;
+  }
+  
+  
+  #content {
+    padding: 20px;
+    border: 2px solid #ccc;
+  }
+  
+  
+  .footer {
+    background-color: #535353;
+    text-align: center;
+  }
+
+
   
 
 
