--- a/index.html
+++ b/index.html
@@ -231,57 +231,42 @@ Classwork 6
 
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Opening a store</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <div class="nav-bar">
-    <a href="#">Steps</a>
-    <a href="#">Products</a>
-    <a href="#">Prices</a>
-  </div>
+	<head>
+		<title>Categories</title>
+		<link rel="stylesheet" type="text/css" href="style.css">
+		
+		
+	</head>
 
-  <div id="content">
-    <h1>My Store</h1>
-    <p>Welcome to my store.</p>
-  </div>
+	<body>
+	<div class="nav-bar">
+    <a href="#">adults</a>
+    <a href="#">teens</a>
+    <a href="#">kids
+      <h1>h1</h1>
+    </a>
 
-  <div class="footer">
-    <p>&copy; 2023 My Store</p>
-  </div>
+ </div>
+
+
 </body>
 </html>
 
 
-div {
-    padding: 10px;
-    border: 1px solid #5a3e3e;
-  }
-  
-  
-  .nav-bar {
-    background-color: #ae7676;
-  }
-  
-  
-  #content {
-    padding: 20px;
-    border: 2px solid #ccc;
-  }
-  
-  
-  .footer {
-    background-color: #535353;
-    text-align: center;
-  }
+div a {
+  background-color: bisque;
+  padding: 25px;
+}
 
+a > h1 {
+  background-color: azure;
+  color: navy;
+}
 
-  
+a + a {
+  background-color: orange;
+}
 
-
-
-  
 
 
 
