--- a/index.html
+++ b/index.html
@@ -267,6 +267,52 @@ a + a {
   background-color: orange;
 }
 
+Classwork 7
+
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Project</title>
+		<link rel="stylesheet" type="text/css" href="style.css">
+		
+		
+	</head>
+
+	<body>
+	<p>click here</p>
+
+</body>
+</html>
+
+
+p:hover{
+  color: chartreuse;
+  font-weight: bold;
+}
+
+p::before {
+  content:'Thank you for choosing our team';
+  font-weight: bold;
+  color: gray;
+}
+
+p::after{
+  color: rgba(0, 183, 255, 0.275);
+  content:'Hello';
+  font-weight: bold;
+}
+
+p::selection{
+  color: rgba(0, 183, 255, 0.848);
+  background-color: blueviolet;
+}
+
+
+
+
+
+
+
 
 
 
