--- a/index.html
+++ b/index.html
@@ -419,9 +419,29 @@ img {
 }
 
 
+Classwork 10
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Animations and Interactions Example</title>
+    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+</head>
+<body class="bg-light">
 
+    <div class="container mt-5">
+        <h1 class="text-4xl font-bold mb-4">Bootstrap Animation</h1>
+        <button class="btn btn-primary" id="bootstrapBtn">Animate</button>
+        <div class="w-64 h-64 bg-primary rounded mt-3" id="bootstrapBox"></div>
+    </div>
 
-
+   
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="script-bootstrap.js"></script>
+</body>
+</html>
 
 
 
